# substrate-bridge-template

./: .gitignore
bridge-relayer/: cargo.toml
bridge-relayer/src/: main.rs
chain-a/: .gitignore
chain-a/runtime/: Cargo.toml
chain-a/runtime/src/: apis.rs  lib.rs
chain-b/: Cargo.toml  chain-a.md
chain-b/runtime/src/: bridge_config.rs  genesis_config_presets.rs  lib.rs
chain-b/runtime/src/configs/: mod.rs
practices/: From.rs  IsType.rs  PARACHAIN_RUNTIME.yml  RELAYER.md  Size_traitrs.rs  as.rs  basic.yml  basic_commands (copy).yml  block.md  builder_pattern.rs  folder_descriptions (copy).yml  generic.rs  import.md  macros.rs  parameter_type.rs  runtime (copy).yml  runtime.yml  turbo_fish.rs  type_alias.rs
primitives/messages/: Cargo.toml
relayers/: Cargo.toml
