[package]
name = "bp-messages"
description = "Primitives of messages module."
version = "0.7.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"


[dependencies]
codec = { version = "3.7.4", features = ["bit-vec", "derive"], package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.219", features = ["alloc", "derive"], workspace = true }

# Bridge dependencies
bp-header-chain = { version = "0.20.1", default-features = false }
bp-runtime = { version = "0.20.1", default-features = false }

# Substrate Dependencies
frame-support = { workspace = true }
sp-core = { version = "36.1.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-std = { version = "14.0.0", default-features = false }


[dev-dependencies]
bp-runtime = { version = "0.20.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "1.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
